--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@descope/vue-sdk": "^2.11.1",
+    "@tailwindcss/vite": "^4.1.12",
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.1.2"
   }
 }
