--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@descope/vue-sdk": "^2.11.1",
     "@tailwindcss/vite": "^4.1.12",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
